fix z-index of controls

--- a/share/static/alice-default.css
+++ b/share/static/alice-default.css
@@ -16,7 +16,8 @@ ul#tabs li:hover {
   cursor: default; }
 
 ul#controls {
-  background: #dddddd; }
+  background: #dddddd;
+  z-index: 901; }
 
 body.blurred ul#controls {
   background: #eeeeee; }
